--- a/package.json
+++ b/package.json
@@ -22,16 +22,21 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
+    "@eslint/js": "^9.38.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "^5.0.3",
-    "eslint": "^9.36.0",
+    "eslint": "^9.38.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "jiti": "^2.6.1",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.44.0",
+    "typescript-eslint": "^8.46.2",
     "vite": "^7.1.7"
   }
 }
