--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@chakra-ui/react": "^3.27.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@reduxjs/toolkit": "^2.10.1",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.22",
     "next-themes": "^0.4.6",
     "preact-icons": "^2.2.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
